k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grc-toolkit
  labels:
    name: grc-toolkit
    app: grc-toolkit
